--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5614,16 +5614,35 @@ video.responsive-video {
   margin: 0.5rem 0 1rem 0;
 }
 
-.collapsible-header {
+@media only screen and (max-width: 992px) {
+ .collapsible-header {
   display: block;
   cursor: pointer;
   min-height: 3rem;
   line-height: 2rem;
-  padding: 0 1rem;
-  font-size: 15px;
+  padding: 15px 1rem;
+  text-align: center;
+  font-size: 17px;
   background-color: #fff;
   border-bottom: 1px solid #ddd;
 }
+}
+
+@media only screen and (min-width: 993px) {
+ .collapsible-header {
+  display: block;
+  cursor: pointer;
+  min-height: 3rem;
+  line-height: 2rem;
+  padding: 15px 1rem;
+  text-align: center;
+  font-size: 20px;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+}
+}
+
+
 
 .collapsible-header i {
   width: 2rem;
@@ -5642,6 +5661,7 @@ video.responsive-video {
   padding: 20px;
   color: #fff;
   font-size: 16px;
+  text-align: center;
 }
 
 .side-nav .collapsible,
