--- a/cadastro/css/component.css
+++ b/cadastro/css/component.css
@@ -73,7 +73,7 @@ a:hover {
 .bl-main > section:nth-child(2) {
 	top: 0;
 	left: 50%;
-	background: #54758b;
+	background: #54758B;
 }
 
 .bl-main > section:nth-child(3) {
