--- a/login/css/component.css
+++ b/login/css/component.css
@@ -372,10 +372,10 @@ div.bl-panel-items > div.bl-hide-current-work {
 ;
 }
 .bl-main > section:nth-child(2).bl-expand {
-	background: #F98262;
+	background: #54758B;
 }
 .bl-main > section:nth-child(3).bl-expand {
-	background: #4BBE8E;
+	background: #54758B;
 }
 .bl-main > section:nth-child(4).bl-expand {
 	background: #0D8278;
